
export interface ResponsibleQuotaPersonAttributes {
	id?: string;
	year?: number;
	name?: string;
	surname?: string;
	agency?: string;
	phone?: string;
	quota?: string;

	createdAt?: Date;
	updatedAt?: Date;
}

// export type QuotaEnum = {
// 	GOOD_STUDY = "good_study"
// }
